--- a/MvcPractice/app/design/Frontend/Template/import/admin/form.phtml
+++ b/MvcPractice/app/design/Frontend/Template/import/admin/form.phtml
@@ -2,7 +2,7 @@
     <h2>Upload and Import CSV File</h2>
     <form action="" method="POST" enctype="multipart/form-data">
         <input type="file" name="file">
-        <label for="fileInput" id="fileLabel" class="btn">Upload CSV File</label>
+        <!-- <label for="fileInput" id="fileLabel" class="btn">Upload CSV File</label> -->
         <button name="read" class="btn" id="readtBtn"
             formaction="<?php echo $this->getUrl('admin/import/read') ?>">Read</button>
     </form>
