--- a/MvcPractice/app/design/Frontend/Template/banner/banner.phtml
+++ b/MvcPractice/app/design/Frontend/Template/banner/banner.phtml
@@ -1,3 +1,4 @@
+<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 <?php
 $bannerCollection = Mage::getModel('banner/banner')->getCollection();
 foreach ($bannerCollection->getData() as $data) {
