--- a/MvcPractice/app/design/Frontend/Template/page/header.phtml
+++ b/MvcPractice/app/design/Frontend/Template/page/header.phtml
@@ -33,20 +33,20 @@
             <div class="col-xl-6 col-lg-7">
                 <nav class="header__menu">
                     <ul>
-                        <li class="active"><a href="./index.html">Home</a></li>
-                        <li><a href="#">Women’s</a></li>
-                        <li><a href="#">Men’s</a></li>
-                        <li><a href="./shop.html">Shop</a></li>
-                        <li><a href="#">Pages</a>
+                        <li class="active"><a href="<?php echo $this->getUrl('') ?>">Home</a></li>
+                        <!-- <li><a href="#">Nacklace</a></li>
+                        <li><a href="#">Men’s</a></li> -->
+                        <li><a href="<?php echo $this->getUrl('catalog/category/view') ?>">Shop</a></li>
+                        <!-- <li><a href="#">Pages</a>
                             <ul class="dropdown">
                                 <li><a href="./product-details.html">Product Details</a></li>
                                 <li><a href="./shop-cart.html">Shop Cart</a></li>
                                 <li><a href="./checkout.html">Checkout</a></li>
                                 <li><a href="./blog-details.html">Blog Details</a></li>
                             </ul>
-                        </li>
-                        <li><a href="./blog.html">Blog</a></li>
-                        <li><a href="./contact.html">Contact</a></li>
+                        </li> -->
+                        <!-- <li><a href="./blog.html">Blog</a></li>
+                        <li><a href="./contact.html">Contact</a></li> -->
                     </ul>
                 </nav>
             </div>
@@ -63,8 +63,7 @@
                         <li><a href="#"><span class="fa fa-heart"></span>
                                 <div class="tip">2</div>
                             </a></li>
-                        <li><a href="<?php $this->getUrl('cart/index/index') ?>"><span
-                                    class="fa fa-shopping-bag"></span>
+                        <li><a href="<?php echo $this->getUrl('cart') ?>"><span class="fa fa-shopping-bag"></span>
                                 <div class="tip">2</div>
                             </a></li>
                     </ul>
