--- a/MvcPractice/app/design/Frontend/Template/catalog/form.phtml
+++ b/MvcPractice/app/design/Frontend/Template/catalog/form.phtml
@@ -37,8 +37,10 @@
                                         name="cart[qty]">
                                 </div>
                             </div>
-                            <a href="#" onclick="myPostData()" class="cart-btn"><span class="fa fa-shopping-bag"></span>
-                                Add to cart</a>
+                            <button type="submit" name="add_to_cart" class="cart-btn"><span
+                                    class="fa fa-shopping-bag"></span>
+                                Add to cart</button>
+
                             <ul>
                                 <li><a href="#"><span class="fa fa-heart"></span></a></li>
                             </ul>
