updated import module

--- a/MvcPractice/app/design/Frontend/Template/cart/cart.phtml
+++ b/MvcPractice/app/design/Frontend/Template/cart/cart.phtml
@@ -61,7 +61,7 @@
                                         </tr>
                                         <?php
                                         if ($this->checkStock($_cartProduct)) { ?>
-                                            <tr>
+                                            <tr class="tr_border">
                                                 <td>
                                                     <p style="color: red">Out of stock</p>
                                                 </td>
